--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,14 @@ server:
   port: 8081
 spring:
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    exchenge:
-      producer: ex.producer.aula-spring
-    routing-key:
-      producer: rk.producer.aula-spring
-    deadletter:
-      producer: dl.producer.aula-spring
+    request:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
+      exchenge:
+        producer: ex.producer.aula-spring
+      routing-key:
+        producer: rk.producer.aula-spring
+      deadletter:
+        producer: dl.producer.aula-spring
